--- a/challenge/templates/main_page.html
+++ b/challenge/templates/main_page.html
@@ -17,17 +17,15 @@
         <div class="container">
             <div id="notch-container">
                 <div id="notch">
-                    <img class="icon" id="clear-icon" height="50px" src="/static/icons/clear.svg"></img>
-                    <div id="about-container">
-                        <img class="icon" id="about-icon" height="50px" src="/static/icons/about.svg"></img>
-                        <div id="about-box">
-                            <p style="margin-bottom: 20px;">This is a cybersecurity challenge created by Matan Berson.</p>
-                            <a href="https://hackerone.com/matanber" style="margin-right: 50px"><img class="social-logo" height=25px src="/static/icons/h1.png"></img></a>
-                            <a href="https://twitter.com/matanber_sec"><img class="social-logo" height=25px src="/static/icons/twitter.svg"></img></a>
-                            <p id="based-on">Based on a real finding</i></p>
-                        </div>
+                    <img class="icon" id="submit-icon" src="/static/icons/eye.svg"></img>
+                    <img class="icon" id="about-icon" src="/static/icons/about.svg"></img>
+                    <img class="icon" id="clear-icon" src="/static/icons/clear.svg"></img>
+                    <div id="about-box">
+                        <p style="margin-bottom: 20px;">This is a cybersecurity challenge created by Matan Berson.</p>
+                        <a href="https://hackerone.com/matanber" style="margin-right: 50px"><img class="social-logo" height=25px src="/static/icons/h1.png"></img></a>
+                        <a href="https://twitter.com/matanber_sec"><img class="social-logo" height=25px src="/static/icons/twitter.svg"></img></a>
+                        <p id="based-on">Based on a real finding</i></p>
                     </div>
-                    <img class="icon" id="submit-icon" height="50px" src="/static/icons/submit.svg"></img>
                     <p id="submit-message" class="hidden"></p>
                 </div>
             </div>
