--- a/challenge/static/styles.css
+++ b/challenge/static/styles.css
@@ -139,17 +139,17 @@ p {
 
 #notch:hover #submit-icon {
     cursor: pointer;
-    transform: translate(-100px, -40px) translate(-50%,0);
+    transform: translate(-120px, -30px) translate(-50%,-50%);
 }
 
 #notch:hover #about-icon {
     z-index: 5;
-    transform: translate(0px, -100px) translate(-50%,0);
+    transform: translate(0px, -80px) translate(-50%,-50%);
 }
 
 #notch:hover #clear-icon {
     cursor: pointer;
-    transform: translate(100px, -40px) translate(-50%,0);
+    transform: translate(120px, -30px) translate(-50%,-50%);
 }
 
 .social-logo {
