--- a/challenge/templates/main_page.html
+++ b/challenge/templates/main_page.html
@@ -17,9 +17,9 @@
         <div class="container">
             <div id="notch-container">
                 <div id="notch">
-                    <img class="icon" id="submit-icon" src="/static/icons/eye.svg"></img>
+                    <img title="Submit your marks for review by the admin" class="icon" id="submit-icon" src="/static/icons/eye.svg"></img>
                     <img class="icon" id="about-icon" src="/static/icons/about.svg"></img>
-                    <img class="icon" id="clear-icon" src="/static/icons/clear.svg"></img>
+                    <img title="Clear your marks" class="icon" id="clear-icon" src="/static/icons/clear.svg"></img>
                     <div id="about-box">
                         <p style="margin-bottom: 20px;">This is a cybersecurity challenge created by Matan Berson.</p>
                         <a href="https://hackerone.com/matanber" style="margin-right: 50px"><img class="social-logo" height=25px src="/static/icons/h1.png"></img></a>
