fix twitter handle

--- a/challenge/templates/main_page.html
+++ b/challenge/templates/main_page.html
@@ -23,7 +23,7 @@
                     <div id="about-box">
                         <p style="margin-bottom: 20px;">This is a cybersecurity challenge created by Matan Berson.</p>
                         <a href="https://hackerone.com/matanber" style="margin-right: 50px"><img class="social-logo" height=25px src="/static/icons/h1.png"></img></a>
-                        <a href="https://twitter.com/matanber_sec"><img class="social-logo" height=25px src="/static/icons/twitter.svg"></img></a>
+                        <a href="https://twitter.com/MtnBer"><img class="social-logo" height=25px src="/static/icons/twitter.svg"></img></a>
                         <p id="based-on">Based on a real finding</i></p>
                     </div>
                     <p id="submit-message" class="hidden"></p>
